# sheet-converter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
api/: index.py
src/converter/: __main__.py  app.py  auth.py  config.py  directions.py  drive_xlsx.py  housing_types.py  merge.py  prices.py  schema.py  sheets.py  templates.py
src/converter/static/: style.css
src/converter/templates/: index.html  login.html
