[project]
name = "sheet-converter"
version = "0.1.0"
description = "Manual mapping converter for real-estate inventory sheets to Salepro templates"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    "pydantic-settings>=2.6",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/converter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TCH", "RUF"]
ignore = ["E501"]
